--- a/1. Algoritmos_y_Programas.ipynb
+++ b/1. Algoritmos_y_Programas.ipynb
@@ -122,12 +122,201 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "a = 20\n",
+        "b = 10"
+      ],
       "metadata": {
         "id": "CXRsWWOaCjcl"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "resultado = a + b"
+      ],
+      "metadata": {
+        "id": "sG9YnKwotJeh"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = input ('ingrese el primer numero: ')\n",
+        "b = input ('ingrese el segundo numer0: ')"
+      ],
+      "metadata": {
+        "id": "obsawZjfuSxO",
+        "outputId": "e3bf7761-59af-4deb-ac4a-5cfeeade4223",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "ingrese el primer numerp: 20\n",
+            "ingrese el segundo numerp: 10\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a"
+      ],
+      "metadata": {
+        "id": "xsHwZ3jOu_6l",
+        "outputId": "42625082-b580-49be-bae1-5ac217650245",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'30'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "int(a)"
+      ],
+      "metadata": {
+        "id": "fg1NpzFOwrlQ",
+        "outputId": "d6ee82ef-3ef3-4001-d89d-99a58e6e1d12",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "20"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = int(input ('ingrese el primer numero: '))\n",
+        "b = int(input ('ingrese el segundo numero: '))\n",
+        "resultado = a + b\n",
+        "print('El resultado es: ')\n",
+        "resultado"
+      ],
+      "metadata": {
+        "id": "zmz2PM86xrVq",
+        "outputId": "e2abb3c3-5040-482f-f0b2-4c32e132976d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ingrese el primer numero: 12\n",
+            "ingrese el segundo numero: 11\n",
+            "El resultado es: \n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "23"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a"
+      ],
+      "metadata": {
+        "id": "8duSZBzkxwWF",
+        "outputId": "bf9821f8-ea65-42fc-9a36-e57a7b8732e7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "30"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = 20\n",
+        "b = 10\n",
+        "resultado = a + b\n",
+        "resultado"
+      ],
+      "metadata": {
+        "id": "KHB9E7lKuMJ6",
+        "outputId": "eb67f269-e7b2-4f3d-de06-2eaf6273185f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "30"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -167,7 +356,15 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "\"\"\"\n",
+        "Inicio\n",
+        "Recibir la temperatura en grados celcius\n",
+        "Aplicar formula de conversion\n",
+        "imprimir el resultado\n",
+        "fin\n",
+        "\"\"\""
+      ],
       "metadata": {
         "id": "0P6hICjcEUAx"
       },
@@ -185,12 +382,29 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "temperatura_celsius = int(input('Ingrese la temperatura en celsius: '))\n",
+        "temperatura_fahrenheit = temperatura_celsius*9/5 + 32\n",
+        "print('La temperatura en Fahrenheit es :', temperatura_fahrenheit)"
+      ],
       "metadata": {
-        "id": "q2NlbgyLEUTv"
+        "id": "q2NlbgyLEUTv",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1eff7c40-ba7b-49f3-8c45-e91243678ff4"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese la temperatura en celsius: 2\n",
+            "La temperatura en Fahrenheit es : 35.6\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
