--- a/1. Algoritmos_y_Programas.ipynb
+++ b/1. Algoritmos_y_Programas.ipynb
@@ -150,11 +150,11 @@
         "b = input ('ingrese el segundo numer0: ')"
       ],
       "metadata": {
-        "id": "obsawZjfuSxO",
-        "outputId": "e3bf7761-59af-4deb-ac4a-5cfeeade4223",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "obsawZjfuSxO",
+        "outputId": "e3bf7761-59af-4deb-ac4a-5cfeeade4223"
       },
       "execution_count": 11,
       "outputs": [
@@ -174,12 +174,12 @@
         "a"
       ],
       "metadata": {
-        "id": "xsHwZ3jOu_6l",
-        "outputId": "42625082-b580-49be-bae1-5ac217650245",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "id": "xsHwZ3jOu_6l",
+        "outputId": "42625082-b580-49be-bae1-5ac217650245"
       },
       "execution_count": 9,
       "outputs": [
@@ -204,11 +204,11 @@
         "int(a)"
       ],
       "metadata": {
-        "id": "fg1NpzFOwrlQ",
-        "outputId": "d6ee82ef-3ef3-4001-d89d-99a58e6e1d12",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "fg1NpzFOwrlQ",
+        "outputId": "d6ee82ef-3ef3-4001-d89d-99a58e6e1d12"
       },
       "execution_count": 12,
       "outputs": [
@@ -234,11 +234,11 @@
         "resultado"
       ],
       "metadata": {
-        "id": "zmz2PM86xrVq",
-        "outputId": "e2abb3c3-5040-482f-f0b2-4c32e132976d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "zmz2PM86xrVq",
+        "outputId": "e2abb3c3-5040-482f-f0b2-4c32e132976d"
       },
       "execution_count": 17,
       "outputs": [
@@ -269,11 +269,11 @@
         "a"
       ],
       "metadata": {
-        "id": "8duSZBzkxwWF",
-        "outputId": "bf9821f8-ea65-42fc-9a36-e57a7b8732e7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "8duSZBzkxwWF",
+        "outputId": "bf9821f8-ea65-42fc-9a36-e57a7b8732e7"
       },
       "execution_count": 14,
       "outputs": [
@@ -298,11 +298,11 @@
         "resultado"
       ],
       "metadata": {
-        "id": "KHB9E7lKuMJ6",
-        "outputId": "eb67f269-e7b2-4f3d-de06-2eaf6273185f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "KHB9E7lKuMJ6",
+        "outputId": "eb67f269-e7b2-4f3d-de06-2eaf6273185f"
       },
       "execution_count": 6,
       "outputs": [
@@ -442,12 +442,40 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "\"\"\"\n",
+        "Inicio\n",
+        "Recibir la longitud del rectángulo\n",
+        "Recibir el ancho del rectángulo\n",
+        "Aplicar formula de cálculo\n",
+        "imprimir el resultado\n",
+        "\n",
+        "\"\"\""
+      ],
       "metadata": {
-        "id": "UyRf86xIFIWY"
+        "id": "UyRf86xIFIWY",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "a1dc599b-d7b7-4474-e61d-d72716e0e3a4"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'\\nInicio\\nRecibir la longitud del rectángulo\\nRecibir el ancho del rectángulo\\nAplicar formula de cálculo\\nimprimir el resultado\\n\\n'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -460,12 +488,31 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "Longitud_rectángulo = int(input('ingrese la longitud del rectángulo: '))\n",
+        "Ancho_rectángulo = int(input('ingrese el ancho del rectángulo: '))\n",
+        "Área_rectángulo = Longitud_rectángulo*Ancho_rectángulo\n",
+        "print('El área del rectángulo es: ', Área_rectángulo)\n"
+      ],
       "metadata": {
-        "id": "IJvYMur8FIWY"
+        "id": "IJvYMur8FIWY",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "27f0fe91-7e10-46ea-c096-8bd9141687d7"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ingrese la longitud del rectángulo: 15\n",
+            "ingrese el ancho del rectángulo: 8\n",
+            "El área del rectángulo es:  120\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -502,7 +549,15 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "\"\"\"\n",
+        "Inicio\n",
+        "Recibir primer número del usuario\n",
+        "Recibir segundo número del usuario\n",
+        "Aplicar fórmula de cálculo\n",
+        "Imprimir el resultado\n",
+        "\"\"\""
+      ],
       "metadata": {
         "id": "4NcqRU8HGaJK"
       },
@@ -520,12 +575,31 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "primer_número = int(input('Ingresar el primero número del usuario: '))\n",
+        "segundo_número = int(input('Ingresar el segundo número del usuario: '))\n",
+        "producto = primer_número*segundo_número\n",
+        "print('El producto es', producto)"
+      ],
       "metadata": {
-        "id": "jqOfKNIsGaJL"
+        "id": "jqOfKNIsGaJL",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "aceb02fb-9c5a-4ced-d9c0-2506308cc74b"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingresar el primero número del usuario: 5\n",
+            "Ingresar el segundo número del usuario: 7\n",
+            "El producto es 35\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -569,7 +643,14 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "\"\"\"\n",
+        "Inicio\n",
+        "Recibir la longitud del cuadrado\n",
+        "Aplicar fórmula de cálculo\n",
+        "Imprimir el resultado\n",
+        "\"\"\""
+      ],
       "metadata": {
         "id": "uDLjzvLUHFkp"
       },
@@ -587,12 +668,29 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "Longitud_cuadrado = int(input('Ingrese la longitud del cuadrado : '))\n",
+        "Perímetro_cuadrado = Longitud_cuadrado*4\n",
+        "print('El perímetro del cuadrado es: ', Perímetro_cuadrado)"
+      ],
       "metadata": {
-        "id": "G_vWP_O8HFkq"
+        "id": "G_vWP_O8HFkq",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "496cbd65-d2cb-432b-e80c-ce56b228ea06"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese la longitud del cuadrado : 5\n",
+            "El perímetro del cuadrado es:  20\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -629,7 +727,15 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "\"\"\"\n",
+        "Inicio\n",
+        "Recibir primer número del usuario\n",
+        "Recibir segundo número del usuario\n",
+        "Aplicar fórmula de cálculo\n",
+        "Imprimir el resultado\n",
+        "\"\"\""
+      ],
       "metadata": {
         "id": "iTjqtjxiHrL7"
       },
@@ -647,12 +753,31 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "primer_número = int(input('ingresar el primero número del usuario: '))\n",
+        "segundo_número = int(input('ingresar el segundo número del usuario: '))\n",
+        "División = primer_número/segundo_número\n",
+        "print('El resultado de la división es', División)"
+      ],
       "metadata": {
-        "id": "KjzD3HZOHrL7"
+        "id": "KjzD3HZOHrL7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ff1f85dc-2f95-481d-ad32-bc1c4c169d65"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ingresar el primero número del usuario: 80\n",
+            "ingresar el segundo número del usuario: 20\n",
+            "El resultado de la división es 4.0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
