--- a/2.Variables_y_expresiones.ipynb
+++ b/2.Variables_y_expresiones.ipynb
@@ -163,6 +163,99 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "source": [
+        "name = 'jhon'\n",
+        "curse = 'programación'\n",
+        "nota = 20"
+      ],
+      "metadata": {
+        "id": "2bOHbhARxIhF"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(f\"Bienvenido al curso {name}, que te vaya muy bien en el curso de {curse}. La nota mínima para aprobar es: {nota}\")"
+      ],
+      "metadata": {
+        "id": "FE_5iKykyc7j",
+        "outputId": "1055af79-b27d-4b99-e66c-c766ad3d03cf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Bienvenido al curso jhon, que te vaya muy bien en el curso de programación. La nota mínima para aprobar es: 20\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Escriba un programa que lea el nombre del estudiante y le dé un mensaje de bienvenida al curso.\n"
+      ],
+      "metadata": {
+        "id": "T2lWpFyazwHZ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "name = input('por favor, indique su nombre: ')\n",
+        "print(f\"Bienvenido al curso de progración {name}\" )"
+      ],
+      "metadata": {
+        "id": "hWlzeovezygL",
+        "outputId": "afaaf868-fe65-4317-a3a6-5d68087a114b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "por favor, indique su nombre: pepe\n",
+            "Bienvenido al curso de progración pepe\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(f\"Bienvenido al curso {name}\")"
+      ],
+      "metadata": {
+        "id": "NH9je0xp0ON9",
+        "outputId": "9b515813-b547-48d6-f6a6-fa053626461a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Bienvenido al curso jhon\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "### Usando variables con strings"
@@ -181,25 +274,51 @@
         "print(full_name)\n"
       ],
       "metadata": {
-        "id": "imkWRD_NGhM7"
+        "id": "imkWRD_NGhM7",
+        "outputId": "ee439f34-35b1-4295-fc1e-94403fc612f0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "John Caballero\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "first_name = str(input('Ingrese el primer nombre: '))\n",
-        "last_name = str(input('Ingrese el apellido: '))\n",
+        "first_name = input('Ingrese el primer nombre: ')\n",
+        "last_name = input('Ingrese el apellido: ')\n",
         "\n",
         "full_name = f\"{first_name} {last_name}\"\n",
         "print(f\"Bienvenido {full_name}!\")\n"
       ],
       "metadata": {
-        "id": "ldadfir2G-ee"
+        "id": "ldadfir2G-ee",
+        "outputId": "3a7a99d7-9417-424b-d1b7-a35e0aaf0710",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese el primer nombre: pepe\n",
+            "Ingrese el apellido: perez\n",
+            "Bienvenido pepe perez!\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -241,10 +360,22 @@
         "print(\"Python's\")"
       ],
       "metadata": {
-        "id": "ypepBjltTCHR"
+        "id": "ypepBjltTCHR",
+        "outputId": "d5fa9aef-58e9-4caa-c41c-00b5f7da3c3e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Python's\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -252,10 +383,46 @@
         "print(\"\\tPython\")"
       ],
       "metadata": {
-        "id": "hGmARCyTH_8F"
+        "id": "hGmARCyTH_8F",
+        "outputId": "18a1fd20-4860-48ae-a007-b9e2621bd56e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\tPython\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"\\nPython\")"
+      ],
+      "metadata": {
+        "id": "hiCR9pLtBUMQ",
+        "outputId": "796875dd-432d-40be-8e8d-ae3195f9f13c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Python\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -263,10 +430,25 @@
         "print(\"Languages:\\nPython\\nC\\nJavaScript\")"
       ],
       "metadata": {
-        "id": "7sLWgXNbH_zY"
+        "id": "7sLWgXNbH_zY",
+        "outputId": "b2f38c9a-e494-41bf-bafd-6297acff1ebe",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Languages:\n",
+            "Python\n",
+            "C\n",
+            "JavaScript\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -274,10 +456,25 @@
         "print(\"Languages:\\n\\tPython\\n\\tC\\n\\tJavaScript\")"
       ],
       "metadata": {
-        "id": "GHwzRJQeIgCo"
+        "id": "GHwzRJQeIgCo",
+        "outputId": "8d7893b4-e3e5-4436-f7c2-c726baeb738b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Languages:\n",
+            "\tPython\n",
+            "\tC\n",
+            "\tJavaScript\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -478,6 +675,32 @@
     {
       "cell_type": "code",
       "source": [
+        "type(10.0)"
+      ],
+      "metadata": {
+        "id": "5MB2k-EQEJg3",
+        "outputId": "bc3c57ac-8450-4ee4-dbff-a6fe3c9139e1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "float"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "2 * 0.2"
       ],
       "metadata": {
@@ -489,13 +712,28 @@
     {
       "cell_type": "code",
       "source": [
-        "0.2 + 0.1"
+        "round(0.25 + 0.12, 1)"
       ],
       "metadata": {
-        "id": "BcImgVOtNySt"
+        "id": "BcImgVOtNySt",
+        "outputId": "c7cbc2df-6aac-466f-88fb-c14a45d69b2b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.4"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -509,13 +747,28 @@
     {
       "cell_type": "code",
       "source": [
-        "4/2"
+        "type(4/2)\n"
       ],
       "metadata": {
-        "id": "iN7X2ZWWOLFS"
+        "id": "iN7X2ZWWOLFS",
+        "outputId": "0d5afbc0-1291-4eea-8335-6ae2c8d46fdf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "float"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
     },
     {
       "cell_type": "code",
