--- a/modulo_1/1. Algoritmos_y_Programas.ipynb
+++ b/modulo_1/1. Algoritmos_y_Programas.ipynb
@@ -1440,15 +1440,15 @@
     {
       "cell_type": "code",
       "source": [
-        "monto_inicial = int(input('Ingrese el monto inicial de la inversio: '))\n",
+        "monto_inicial = int(input('Ingrese el monto inicial de la inversión: '))\n",
         "tasa_interes = int(input('Ingrese tasa de interes: '))\n",
         "años_inversión = int(input('Ingrese años de inversión: '))\n",
         "monto_final = monto_inicial +(monto_inicial * (tasa_interes/100) * años_inversión)\n",
-        "print(f\"El monto final es: {monto_final}\")\n"
+        "print(f\"El monto final esserá: {monto_final}\")\n"
       ],
       "metadata": {
         "id": "HlizzaY2QSwP",
-        "outputId": "5b05e9e5-9db7-420a-8888-a55c756f30f1",
+        "outputId": "52ef64ae-01fc-45d2-8951-466df734a704",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1459,10 +1459,10 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Ingrese el monto inicial de la inversio: 10000\n",
-            "Ingrese tasa de interes: 5\n",
-            "Ingrese años de inversión: 2\n",
-            "El monto final es: 11000.0\n"
+            "Ingrese el monto inicial de la inversión: 15000\n",
+            "Ingrese tasa de interes: 10\n",
+            "Ingrese años de inversión: 5\n",
+            "El monto final esserá: 22500.0\n"
           ]
         }
       ]
@@ -1504,7 +1504,15 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#inicio\n",
+        "#Preguntar peso en kilogramos\n",
+        "#Preguntar la duración física\n",
+        "#asignar un valor fijo de calorias quemadas (calorias/minutos)\n",
+        "#calcular el total de calorias quemadas\n",
+        "#Mostrar calorias quemadas (calorias)\n",
+        "#fin"
+      ],
       "metadata": {
         "id": "fVTGcp18Qs3X"
       },
@@ -1522,12 +1530,39 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "usuario = input('Ingrese el genero del usuario (Hombre o Mujer): ')\n",
+        "Peso_usuario = int(input(' Ingrese el peso del usuario en KG: '))\n",
+        "Tiempo_actividad = int(input(' Ingrese el tiempo de actividad física en minutos: '))\n",
+        "\n",
+        "if usuario == 'Hombre':\n",
+        "  calorias_usuario = Peso_usuario * Tiempo_actividad * 1\n",
+        "\n",
+        "else:\n",
+        "  calorias_usuario = Peso_usuario * Tiempo_actividad * 0.9\n",
+        "\n",
+        "print(f\" El calorias quemadas por el {usuario} fue de {calorias_usuario}: \")\n"
+      ],
       "metadata": {
-        "id": "k_fVDjUMQs3X"
+        "id": "k_fVDjUMQs3X",
+        "outputId": "d3070b18-82a0-4bed-e27a-6d139cbb942d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese el genero del usuario (Hombre o Mujer): Hombre\n",
+            " Ingrese el peso del usuario en KG: 70\n",
+            " Ingrese el tiempo de actividad física en minutos: 20\n",
+            " El calorias quemadas por el Hombre fue de 1400: \n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
