Se creó con Colab

--- a/Modulo3/Funciones.ipynb
+++ b/Modulo3/Funciones.ipynb
@@ -204,10 +204,22 @@
         "saludo?"
       ],
       "metadata": {
-        "id": "udWbjnTa6ZkL"
+        "id": "udWbjnTa6ZkL",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "eacd5bc7-ade8-4d9a-d45d-2ec2247c748b"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Object `saludo` not found.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -483,6 +495,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# @title Texto de título predeterminado\n",
         "\n",
         "def average(a, b):\n",
         "  '''This function compute mean from two numbers\n",
@@ -497,6 +510,13 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "9aNDiflpJybF"
+      }
     },
     {
       "cell_type": "code",
@@ -545,12 +565,135 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def multiplos(M, n):\n",
+        "  \"\"\"\n",
+        "  Esta función devuelve todos los múltiplos de n menores que M.\n",
+        "\n",
+        "  Parámetros:\n",
+        "  M: Número hasta el que se evaluará\n",
+        "  n: Valor del múltiplo a evaluar\n",
+        "  \"\"\"\n",
+        "  for i in range(n, M+1):\n",
+        "   if i % n == 0:\n",
+        "      print(i)\n",
+        "\n"
+      ],
       "metadata": {
-        "id": "pfGnVbV-AEkj"
+        "id": "uo8POmbaOehO"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "multiplos(50, 5)"
+      ],
+      "metadata": {
+        "id": "Ly3k5jspPaYo",
+        "outputId": "bb1474cd-44d0-4b5e-aecb-c3ae41e7c75d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n",
+            "10\n",
+            "15\n",
+            "20\n",
+            "25\n",
+            "30\n",
+            "35\n",
+            "40\n",
+            "45\n",
+            "50\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# prompt: Define una función que tenga dos inputs. El primero define hasta que valor se evaluará el conjunto de números (M) (Por ejemplo del 0 al 100) y el segundo será el valor del multiplo que se evaluará (n). La función debe printear todos los valores múltiplos de n menores que M.\n",
+        "\n",
+        "def multiples(m, n):\n",
+        "  \"\"\"\n",
+        "  Esta función devuelve todos los múltiplos de n menores que m.\n",
+        "\n",
+        "  Parámetros:\n",
+        "  m: Número hasta el que se evaluará.\n",
+        "  n: Valor del múltiplo a evaluar.\n",
+        "  \"\"\"\n",
+        "  for i in range(n, m+1):\n",
+        "    if i % n == 0:\n",
+        "      print(i)\n",
+        "\n",
+        "multiples(100, 10)\n"
+      ],
+      "metadata": {
+        "id": "pfGnVbV-AEkj",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0ec13e2c-f672-4828-c811-dcf2dac8f36e"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10\n",
+            "20\n",
+            "30\n",
+            "40\n",
+            "50\n",
+            "60\n",
+            "70\n",
+            "80\n",
+            "90\n",
+            "100\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "multiples(50, 5)"
+      ],
+      "metadata": {
+        "id": "WMiyWOYTQDtY",
+        "outputId": "f8230f04-7a97-4734-8534-255bf9c0deb1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n",
+            "10\n",
+            "15\n",
+            "20\n",
+            "25\n",
+            "30\n",
+            "35\n",
+            "40\n",
+            "45\n",
+            "50\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2825,6 +2968,100 @@
       "metadata": {
         "id": "cc00yHUyS3zJ"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "def build_grades(name, program, statistics, physics, age ='', university =''):\n",
+        "  \"\"\"\"\"\"\n",
+        "  my_dict = {'name' : name,\n",
+        "             'program grade' : program,\n",
+        "             'statistics grade' : statistics,\n",
+        "             'physics grade' : physics}\n",
+        "  if age:\n",
+        "    my_dict['age'] = age\n",
+        "  if university:\n",
+        "    my_dict['university'] = university\n",
+        "\n",
+        "  return my_dict\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "HArN3zTKjLOl"
+      },
+      "execution_count": 26,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "build_grades('John', 12, 15, 18, 32, 'San Marcos')"
+      ],
+      "metadata": {
+        "id": "WbF6VBhClifa",
+        "outputId": "a9006df1-8b8b-4e1d-fd1f-99c08fe18cec",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'name': 'John',\n",
+              " 'program grade': 12,\n",
+              " 'statistics grade': 15,\n",
+              " 'physics grade': 18,\n",
+              " 'age': 32,\n",
+              " 'university': 'San Marcos'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def almacenar_notas(nombre, programacion, estadistica, fisica, edad=None, universidad=None):\n",
+        "    estudiante = {\n",
+        "        \"Nombre\": nombre,\n",
+        "        \"Programación\": programacion,\n",
+        "        \"Estadística\": estadistica,\n",
+        "        \"Física\": fisica\n",
+        "    }\n",
+        "    if edad is not None:\n",
+        "        estudiante[\"Edad\"] = edad\n",
+        "    if universidad is not None:\n",
+        "        estudiante[\"Universidad\"] = universidad\n",
+        "\n",
+        "    return estudiante\n",
+        "\n",
+        "# Ejemplo de uso:\n",
+        "datos_estudiante = almacenar_notas(\"Juan\", 85, 90, 75, 20, \"Universidad XYZ\")\n",
+        "print(datos_estudiante)"
+      ],
+      "metadata": {
+        "id": "btHkXblIjLLO",
+        "outputId": "7b896049-17fc-46bb-865b-62a286500a66",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'Nombre': 'Juan', 'Programación': 85, 'Estadística': 90, 'Física': 75, 'Edad': 20, 'Universidad': 'Universidad XYZ'}\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
